--- a/app/src/main/res/layout-land/fragment_overview.xml
+++ b/app/src/main/res/layout-land/fragment_overview.xml
@@ -97,10 +97,10 @@
                             android:layout_height="wrap_content"
                             android:checkable="true"
                             android:checked="false"
+                            android:minHeight="32dp"
                             android:text="@string/show_only_open"
                             app:checkedIcon="@drawable/funnel"
-                            app:checkedIconVisible="true"
-                            app:chipMinTouchTargetSize="0dp" />
+                            app:checkedIconVisible="true" />
 
                     </com.google.android.material.chip.ChipGroup>
                 </LinearLayout>
