--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -10,6 +10,13 @@
         android:layout_height="wrap_content"
         android:title="@string/notification_settings_high"
         app:key="notification_settings_high" />
+    <SwitchPreferenceCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:defaultValue="false"
+        android:summary="@string/override_dnd_summary"
+        android:title="@string/override_dnd"
+        app:key="override_dnd" />
     <ListPreference
         android:defaultValue="0"
         android:entries="@array/dismiss_notification_action"
