--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -61,6 +61,11 @@
         android:defaultValue="false"
         android:key="window_flag_secure"
         android:title="@string/block_screen_capture" />
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="app_authentication"
+        android:enabled="false"
+        android:title="@string/app_authentication" />
     <ListPreference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
