--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -57,10 +57,7 @@
         android:title="@string/overview_events"
         app:key="overview_events"
         app:useSimpleSummaryProvider="true" />
-    <SwitchPreference
-        android:defaultValue="false"
-        android:key="window_flag_secure"
-        android:title="@string/block_screen_capture" />
+    <Preference app:key="privacy_settings" app:title="@string/privacy_settings" />
     <ListPreference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
