--- a/app/src/main/res/xml/privacy_preferences.xml
+++ b/app/src/main/res/xml/privacy_preferences.xml
@@ -6,6 +6,11 @@
         android:title="@string/block_screen_capture" />
     <SwitchPreference
         android:defaultValue="false"
+        android:enabled="false"
+        android:key="app_authentication"
+        android:title="@string/app_authentication" />
+    <SwitchPreference
+        android:defaultValue="false"
         android:key="hide_med_name"
         android:title="@string/hide_med_name" />
 </androidx.preference.PreferenceScreen>
