--- a/app/src/main/res/layout/dialog_color_editor.xml
+++ b/app/src/main/res/layout/dialog_color_editor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -24,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="@string/cancel" />
+            android:text="@string/cancel"
+            tools:ignore="NestedWeights" />
 
         <Button
             android:id="@+id/confirmSelectColor"
