--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,8 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:contentDescription="@string/taken"
-        android:text="@string/taken"
-        app:icon="@drawable/check2_circle" />
+        android:drawableStart="@drawable/check2_circle"
+        android:text="@string/taken" />
 
     <LinearLayout
         android:layout_width="match_parent"
