Further text fixes Added button icons

--- a/app/src/main/res/layout/card_medicine.xml
+++ b/app/src/main/res/layout/card_medicine.xml
@@ -43,8 +43,7 @@
                 android:id="@+id/medicineName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:textStyle="bold" />
+                android:layout_gravity="center_vertical" />
 
             <TextView
                 android:id="@+id/remindersSummary"
